--- a/sources.html
+++ b/sources.html
@@ -7,11 +7,10 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-  <p>このサイトは以下の３種類のデータを用いています。第１は、横浜市の一般会計当初予算の使いみち１０分類のデータ・ラベル。第２は、この１０分類を更に細分類した２０分類のデータ・ラベル。第３は、横浜市の２４年度一般会計予算の２０分類別の予算比率データです。</p>
+  <p>このサイトは、平成25年度葛飾区一般会計予算の歳出の金額データのうち、款・項レベルの金額データを用いています。</p>
 
-  <p>第１および第２のデータ・ラベルは、横浜市財政局財政課による「平成２４年度予算案について　資料編」９８頁の「市民一人あたり予算の使いみち（一般会計）」表中の分野名および局・統括本部名を用いています。</p>
+  <p>最初に表示される12の分野が「款」に、そのそれぞれのアイコンをクリックしたときに表示される１～１０の分野が「項」に当たります。</p>
 
-  <p>第３の予算比率データは、前出「平成２４年度予算案について」３６〜７２頁の「４　２４年度の主要事業一覧（１） ２４年度局の主要事業一覧」表中の局・統括本部の主要事業予算総額の比率を用いています。</p>
   </div>
 </div>
 
@@ -20,14 +19,14 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-  横浜市財政局財政課が「平成２４年度予算案について　資料編」において用いている一般会計予算の使いみち10分類および局・統括本部２０分類を使っています。
+  平成25年度葛飾区一般会計予算書の款・項の分類を使っています。
   </div>
 </div>
 <h2 class="page-header">いつの時点のデータを使っているのか？ </h2>
 
 <div class="row">
   <div class="span8 offset4">
-  平成２４年度横浜市予算のデータを使っています。
+  平成２５年度当初予算のデータを使っています。
   </div>
 </div>
 
@@ -35,7 +34,7 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-自分の年間総収入を入力し、単身世帯かそれ以外かを選択すると、給与所得者であるという前提で、年間に支払う市税年総額と一日当たりに支払っている市税額が表示されます。一日当たりの市税額は10分野に分類されています。また、１０の各分野毎に支払われている市税額は、それぞれ、主要な事業予算を担当している市税額に細分類されています。<br/>所得控除額は、単身世帯の場合33万円、扶養一人世帯の場合66万円、市税負担額は課税対象額の6％と設定しています。また、10分野への税金の配分比率は、横浜市の一般会計全体における10分野への予算配分比率(24年1月1日現在)を使っています。
+自分の年間総収入を入力し、単身世帯かそれ以外かを選択すると、給与所得者であるという前提で、年間に支払う区民税年総額と一日当たりに支払っている区民税額が表示されます。一日当たりの区民税額は分野に分類されています。<br/>所得控除額は、単身世帯の場合33万円、扶養一人世帯の場合66万円、区民税の負担割合は課税対象額の6％と設定しています。また、各分野への税金の配分比率は、葛飾区の一般会計全体に占める各分野の予算額比率を使っています。
 </div>
 </div>
 
@@ -49,6 +48,7 @@ If you know of data published in this way for your country, please email us at <
   </div>
 </div-->
 
+<!--
 <h2 class="page-header">どのようなデータを使っているのですか？</h2>
 
 <div class="row">
@@ -57,6 +57,7 @@ If you know of data published in this way for your country, please email us at <
 
   </div>
 </div>
+-->
 
 <h2 class="page-header">私のデータの視覚化をお願いできますか？ </h2>
 
