--- a/team.html
+++ b/team.html
@@ -31,3 +31,16 @@ title: Team
 
 </div>
 </div>
+<h2 class="page-header">葛飾区版作成</h2>
+
+<div class="row credits">
+  <div class="span8 offset4">
+
+<ul>
+<li>西沢　明(Nishizawa Akira)</li>
+</ul>
+
+</div>
+</div>
+
+
